tests/negative/neg_pr1162_removed_declare_expression.safe
package neg_PR1162_Removed_Declare_Expression

   function build returns integer

      return declare
         temp : integer = 1;
      begin
         temp;
